--- a/themes/bix/sass/_single-story.scss
+++ b/themes/bix/sass/_single-story.scss
@@ -11,176 +11,88 @@
 	min-width: 320px;
 	display: block;
 	width: 100%;
+}
 
-	.entry-header {
-		height: 100vh;
-		position: relative;
-		font-family: $font__header;
-		text-transform: uppercase;
+.entry-header {
+	height: 100vh;
+	position: relative;
+	font-family: $font__header;
+	text-transform: uppercase;
 
-		h2 {
-			font-size: 21px;
-			position: absolute;
-			top: 23px;
-			left: 10px;
-			font-weight:bold;
-			span{
-				font-weight: 300;
-			}
-		}
-
-		.stories-ribbon {
-			position: absolute;
-			top: 30px;
-			left: -45px;
-			z-index: -2;
-		}
-
-		h1.entry-title {
-			width: 100%;
-			text-align: center;
-			font-size: 21px;
-			position: absolute;
-			top: 70vh;
-			font-weight: 400;
-			background: rgba(255,255,255,0.8);
-		}
-
-		.img-container {
-			overflow: hidden;
-			height: 100%;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-
-			img.wp-post-image {
-				min-height: 100%;
-				max-width: none;
-				z-index: -3;
-			}
-		}
-	}
-
-	.story-content {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-flow: column nowrap;
-		h2.story-number {
-			border: solid 2px $color__orange;
-			border-width: 2px 0;
-			text-align: center;
-			font-family: $font__header;
-			text-transform: uppercase;
-			font-size: 21px;
-			font-weight: 400;
-			color: $color__orange;
-			padding: 0 40px;
-		}
-		p{
-			margin: 0 30px 20px 30px;
+	h2 {
+		font-size: 21px;
+		position: absolute;
+		top: 23px;
+		left: 10px;
+		font-weight:bold;
+		span{
 			font-weight: 300;
 		}
-		.practice-block {
-			font-size: 1.5rem;
-			text-transform: uppercase;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			flex-flow: column nowrap;
-			text-align: center;
-
-			h2.practice-title{
-				border: solid 2px $color__orange;
-				border-width: 2px 0;
-				text-align: center;
-				font-family: $font__header;
-				text-transform: uppercase;
-				font-size: 21px;
-				font-weight: 400;
-				color: $color__orange;
-				padding: 0 10vw;
-			}
-			p {
-				display: block;
-				width: 100%;
-			}
-
-			hr {
-				border: solid $color__orange 1px;
-				width: 50vw;
-				background: $color__orange;
-			}
-		}
 	}
 
-}
+	.stories-ribbon {
+		position: absolute;
+		top: 30px;
+		left: -45px;
+		z-index: -2;
+	}
 
-.bottom-toolbar-wrapper {
-	display: none;
-	transition: 0.3s;
-	position: fixed;
-	width: 100%;
-	height: 70px;
-	background: white;
-	bottom: -70px;
-	border: 1px solid $color__blue;
-	border-left: 0;
-	border-right: 0;
-	z-index: 3;
-	justify-content: center;
-	align-items: center;
-	.bottom-toolbar {
-		height: 100%;
+	h1.entry-title {
 		width: 100%;
-		max-width: 1024px;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		.tools {
-			font-size: 2rem;
-			padding: 0 20px;
-			color: $color__blue;
-			i {
-				padding: 0 10px;
-			}
-		}
-		.next-story {
-			border-left: solid 1px $color__blue;
-			padding: 0 20px;
-			font-family: $font__header;
-			p{
-				margin: 0;
-				padding: 0;
-			}
-			a {
-				text-decoration: none;
-				text-transform: uppercase;
-				color: $color__blue;
-				&:hover {
-					color: $color__orange;
-				}
-			}
-		}
+		text-align: center;
+		font-size: 21px;
+		position: absolute;
+		top: 70vh;
+		font-weight: 400;
+		background: rgba(255,255,255,0.8);
 	}
-}
-.bottom-toolbar-wrapper-slide-up {
-	transition: 0.5s;
-	bottom: 50px;
-}
 
-.comment-section-border {
-	display: flex;
-	justify-content: center;
-	text-align: center;
-	flex-flow: column;
-	width: 100%;
-	.comment-title-wrapper {
+	.img-container {
+		overflow: hidden;
+		height: 100%;
 		display: flex;
 		justify-content: center;
-		text-align: center;
+		align-items: center;
+
+		img.wp-post-image {
+			min-height: 100%;
+			max-width: none;
+			z-index: -3;
+		}
 	}
-	.comment-title {
+}
+
+.story-content {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: column nowrap;
+	h2.story-number {
+		border: solid 2px $color__orange;
+		border-width: 2px 0;
+		text-align: center;
+		font-family: $font__header;
+		text-transform: uppercase;
+		font-size: 21px;
+		font-weight: 400;
+		color: $color__orange;
+		padding: 0 40px;
+	}
+	p{
+		margin: 0 30px 20px 30px;
+		font-weight: 300;
+	}
+}
+.practice-block {
+	font-size: 1.5rem;
+	text-transform: uppercase;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: column nowrap;
+	text-align: center;
+
+	h2.practice-title{
 		border: solid 2px $color__orange;
 		border-width: 2px 0;
 		text-align: center;
@@ -190,13 +102,104 @@
 		font-weight: 400;
 		color: $color__orange;
 		padding: 0 10vw;
-		margin-top: 0;
 	}
-	#disqus_thread {
+	p {
+		display: block;
 		width: 100%;
-		padding: 1rem 2rem;
+	}
+
+	hr {
+		border: solid $color__orange 1px;
+		width: 50vw;
+		background: $color__orange;
 	}
 }
+
+
+
+// bottom toolbar
+	.bottom-toolbar-wrapper {
+		display: none;
+		transition: 0.3s;
+		position: fixed;
+		width: 100%;
+		height: 70px;
+		background: white;
+		bottom: -70px;
+		border: 1px solid $color__blue;
+		border-left: 0;
+		border-right: 0;
+		z-index: 3;
+		justify-content: center;
+		align-items: center;
+	}
+	.bottom-toolbar {
+		height: 100%;
+		width: 100%;
+		max-width: 1024px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	.tools {
+		font-size: 2rem;
+		padding: 0 20px;
+		color: $color__blue;
+		i {
+			padding: 0 10px;
+		}
+	}
+	.next-story {
+		border-left: solid 1px $color__blue;
+		padding: 0 20px;
+		font-family: $font__header;
+		p{
+			margin: 0;
+			padding: 0;
+		}
+		a {
+			text-decoration: none;
+			text-transform: uppercase;
+			color: $color__blue;
+			&:hover {
+				color: $color__orange;
+			}
+		}
+	}
+	.bottom-toolbar-wrapper-slide-up {
+		transition: 0.5s;
+		bottom: 50px;
+	}
+
+// comment section
+	.comment-section-border {
+		display: flex;
+		justify-content: center;
+		text-align: center;
+		flex-flow: column;
+		width: 100%;
+		.comment-title-wrapper {
+			display: flex;
+			justify-content: center;
+			text-align: center;
+		}
+		.comment-title {
+			border: solid 2px $color__orange;
+			border-width: 2px 0;
+			text-align: center;
+			font-family: $font__header;
+			text-transform: uppercase;
+			font-size: 21px;
+			font-weight: 400;
+			color: $color__orange;
+			padding: 0 10vw;
+			margin-top: 0;
+		}
+		#disqus_thread {
+			width: 100%;
+			padding: 1rem 2rem;
+		}
+	}
 
 
 // breakpoints
