about page img opt

--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -107,7 +107,7 @@ h3 {
 
 	.company-section-title {
 		position: relative;
-		background: url(../../images/about-bickson2.png);
+		background: url(../../images/about-bickson2.jpg);
 		background-size: cover;
 		img {
 			visibility: hidden;
@@ -212,7 +212,7 @@ h3 {
 	@media all and (min-width: 600px) {
 		
 		.about-banner{
-	    background: url(../../images/about-page-banner.png) no-repeat center left;
+	    background: url(../../images/about-page-banner-lg.jpg) no-repeat center left;
 	    background-size: cover;
 	    height: 70vh;
 	    overflow: hidden;
@@ -261,7 +261,7 @@ h3 {
 
 		.author-section-title {
 			position: relative;
-			background: url(../../images/about-bix-bickson.png);
+			background: url(../../images/about-bix-bickson.jpg);
 			background-size: cover;
 			img {
 				display: block;
