--- a/themes/bix/sass/_stories.scss
+++ b/themes/bix/sass/_stories.scss
@@ -50,6 +50,7 @@
 		background-position: center center;
 		height: 650px;
 		position: relative;
+		z-index: 0;
 	}	
 	.stories-ribbon{
 		position: absolute;
@@ -72,7 +73,7 @@
 	.entry-content{
 		position: absolute;
 		padding: 10px 40px;
-		bottom: 0;
+		bottom: 0px;
 		width: 100%;
 		height: auto;
 		background-color: rgba(112,179,203,.8);
@@ -105,7 +106,7 @@
 		color: #fff;
 		font-weight: 500;
 		text-transform: uppercase;
-		}
+		}	
 	}	
 }
 
