--- a/themes/bix/sass/_thank-you-modal.scss
+++ b/themes/bix/sass/_thank-you-modal.scss
@@ -70,19 +70,18 @@
 .thank-you-modal__overlay {
   display: inline-block;
   background: #F9AC31;
-  left: 20%;
+  left: 0%;
   bottom: 0;
   top:0;
   position: fixed;
   text-align: center;
   text-shadow: none;
   z-index: 600;
-  width: 60%;
+  width: 100%;
 }
 
 .thank-you-modal__wrap {
-  top: 50%;
-  padding: .5em;
+  padding: 1em 0;
   position: relative;
   margin: 20px auto;
   max-width: 500px;
@@ -139,7 +138,7 @@
 
 .thank-you-modal__overlay {
   opacity: 0;
-  transform: scale(0.5);
+  transform: scale(1);
   transition: all 0.75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   z-index: -100;
 }
