--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -2991,9 +2991,9 @@ strong {
   width: 80%;
   height: 11vh; }
 
-.modal-button {
-  padding: 10px;
-  margin-top: 10px;
+#modal-button {
+  margin-top: 50%;
+  margin-right: 15%;
   color: #fff;
   text-decoration: none;
   border: solid #fff 2px;
@@ -3005,7 +3005,7 @@ strong {
   text-shadow: none;
   width: 50%; }
 
-.modal-button:hover {
+#modal-button:hover {
   text-shadow: none;
   box-shadow: none;
   background-color: #ffffff;
@@ -3101,18 +3101,17 @@ strong {
 .thank-you-modal__overlay {
   display: inline-block;
   background: #F9AC31;
-  left: 20%;
+  left: 0%;
   bottom: 0;
   top: 0;
   position: fixed;
   text-align: center;
   text-shadow: none;
   z-index: 600;
-  width: 60%; }
+  width: 100%; }
 
 .thank-you-modal__wrap {
-  top: 50%;
-  padding: .5em;
+  padding: 1em 0;
   position: relative;
   margin: 20px auto;
   max-width: 500px;
@@ -3164,7 +3163,7 @@ strong {
 
 .thank-you-modal__overlay {
   opacity: 0;
-  transform: scale(0.5);
+  transform: scale(1);
   transition: all 0.75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   z-index: -100; }
 
