stories page style fixes

--- a/themes/bix/sass/_footer.scss
+++ b/themes/bix/sass/_footer.scss
@@ -3,7 +3,7 @@
   max-width: 100%;
   text-align: center;
   overflow: hidden;
-  //position: relative;
+  min-height:0px;
 }
 .footer-wrapper{
 	position: relative;
